# polls

./: Makefile  README.md  pyproject.toml  setup.cfg  task.txt
polls/: settings.py
polls/polls/: admin.py  apps.py  models.py
polls/polls/migrations/: 0001_initial.py  0002_auto_20220111_1053.py  0003_auto_20220111_1057.py  0004_auto_20220111_1437.py
