[tool.poetry]
name = "polls"
version = "0.1.0"
description = "Poll user system."
authors = ["akocur <akocur@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "2.2.10"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.3"
wemake-python-styleguide = "^0.16.0"
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
